# raydial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  raydial.pc  run_tests.sh
docs/: API.md  CONTRIBUTING.md  LOCALIZATION.md
examples/: 0_basic_example.c  1_counter_example.c  2_dialogue_tree_example.c  4_animated_text_example.c  4_image_gallery_example.c  5_portrait_dialogue_example.c  6_styled_dialogue_example.c  7_localization_example.c  8_enter_dialogue_example.c  CMakeLists.txt  advanced_example.c  basic_example.c  dialogue_tree_example.c  example  generate_portraits.c  main.c
include/: raydial.h  raydial_i18n.h
src/: raydial.c  raydial_i18n.c
tests/: CMakeLists.txt  raydial_tests.c  raydial_tests_cmocka.c
